Fix editor content overflow

--- a/src/richtext.scss
+++ b/src/richtext.scss
@@ -171,6 +171,8 @@ $highlight: #3498db;
         font-family: Calibri,Verdana,Helvetica,sans-serif;
         height: 300px;
         outline: none;
+        overflow-y: scroll;
+        overflow-x: auto;
 
         ul, ol {
             margin: 10px 25px;
